--- a/src/css_part/flex-box&grid.html
+++ b/src/css_part/flex-box&grid.html
@@ -329,6 +329,23 @@
             </div>
           </blockquote>
         </li>
+        <li>
+          <h4>자동으로 칼럼 개수를 조절하는 auto-fill, auto-fit</h4>
+          <blockquote>
+            <p>grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));</p>
+            <div id="wrapper2">
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+            </div>
+            <p>grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));</p>
+            <div id="wrapper3">
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+            </div>
+          </blockquote>
+        </li>
       </ul>
     </section>
   </div>
