--- a/src/css_part/flex-box&grid.html
+++ b/src/css_part/flex-box&grid.html
@@ -346,6 +346,42 @@
             </div>
           </blockquote>
         </li>
+        <li>
+          <h4>그리드 항목의 간격을 지정 grid-column-gap, grid-row-gap, grid-gap</h4>
+          <blockquote>
+            <p>grid-gap: 2rem 1rem; (row column)</p>
+            <div id="wrapper4">
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+              <div class="items">aaaaa bbbbbbbbbb ccccccccccccccc ddddddddddd dddddddddd</div>
+            </div>
+          </blockquote>
+        </li>
+        <li>
+          <h4>그리드 라인을 이용해 배치하기</h4>
+          <blockquote>
+            <div id="wrapper5">
+              <div class="box box1">box1</div>
+              <div class="box box2">box2</div>
+              <div class="box box3">box3</div>
+              <div class="box box4">box4</div>
+            </div>
+          </blockquote>
+        </li>
+        <li>
+          <h4>템플릿 영역을 만들어 배치하기</h4>
+          <blockquote>
+            <div id="wrapper6">
+              <div class="box box5">box5</div>
+              <div class="box box6">box6</div>
+              <div class="box box7">box7</div>
+              <div class="box box8">box8</div>
+            </div>
+          </blockquote>
+        </li>
       </ul>
     </section>
   </div>
