js object initial commit

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
               <button id="js-btn">JS</button>
               <ul class="menu">
                 <li><a href="../src/js_part/event.html">이벤트</a></li>
+                <li><a href="../src/js_part/object.html">객체</a></li>
               </ul>
             </li>
           </ul>
