--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
             <li class="top-level-entry-container">
               <button id="js-btn">JS</button>
               <ul class="menu">
+                <li><a href="../src/js_part/basic.html">기본 입출력</a></li>
                 <li><a href="../src/js_part/event.html">이벤트</a></li>
                 <li><a href="../src/js_part/object.html">객체</a></li>
               </ul>
